--- a/index.html
+++ b/index.html
@@ -23,18 +23,7 @@
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Dashboard <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Lista de FIIs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Eventos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Livros recomendados</a>
-                </li>
+                
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="nav-item">
@@ -60,21 +49,39 @@
         </div>
     </nav>
 
-    <header id="header">
+    <header id="header" class="bg-premium-dark">
         <div class="container">
             <div class="row">
-                <div class="col-md-10">
-                    <h1><i class="fas fa-cog"></i> Dashboard <small>Manage your Site</small></h1>
+                <div class="col-12 hide-mobile">
+                    <ul class="nav">
+                        <li class="nav-item active">
+                            <a class="nav-link text-white" href="index.html">Dashboard<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Pesquisar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Lista de FIIs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Eventos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Livros recomendados</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-2">
-                    <div class="dropdown create">
+                <div class="col-12">
+                    <div class="dropdown create show-mobile">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Create content
+                          Menu
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-                          <a class="dropdown-item" href="#">Add Page</a>
-                          <a class="dropdown-item" href="#">Add Post</a>
-                          <a class="dropdown-item" href="#">Add User</a>
+                          <a class="dropdown-item" href="#">Dashboard</a>
+                          <a class="dropdown-item" href="#">Pesquisar</a>
+                          <a class="dropdown-item" href="#">Lista de FIIs</a>
+                          <a class="dropdown-item" href="#">Eventos</a>
+                          <a class="dropdown-item" href="#">Livros recomendados</a>
                         </div>
                       </div>
                 </div>
@@ -94,7 +101,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <div class="list-group">
+                    <!-- <div class="list-group">
                         <a href="#" class="list-group-item list-group-item-action active disabled main-color-bg">
                             <i class="fas fa-money-check fa-lg"></i>&nbsp;&nbsp;Perfil
                         </a>
@@ -110,14 +117,156 @@
                         <a href="#" class="list-group-item list-group-item-action">
                             <i class="fas fa-comments-dollar fa-lg"></i>&nbsp;&nbsp;Discussão
                         </a>
+                    </div> -->
+                    <div id="accordion">
+                        <div class="card">
+                          <div class="card-header" id="headingOne">
+                            <h5 class="mb-0">
+                              <a href="#" class="btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                <i class="fas fa-money-check fa-lg"></i>&nbsp;&nbsp;Perfil
+                              </a>
+                            </h5>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-header" id="headingTwo">
+                            <h5 class="mb-0">
+                              <a href="#" class="btn" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                <i class="fas fa-city fa-lg"></i>&nbsp;&nbsp;Ativos
+                              </a>
+                            </h5>
+                          </div>
+                          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                            <ul class="list-group">
+                                <li class="list-group-item">Físicos</li>
+                                <li class="list-group-item">Financeiros</li>
+                                <li class="list-group-item">Consolidado</li>
+                                <li class="list-group-item">Aquisições/Alienações</li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-header" id="headingThree">
+                            <h5 class="mb-0">
+                              <a href="#" class="btn" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <i class="fas fa-chart-line fa-lg"></i>&nbsp;&nbsp;Dados e simulacões 
+                              </a>
+                            </h5>
+                          </div>
+                          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                                <ul class="list-group">
+                                    <li class="list-group-item">Fundamentos</li>
+                                    <li class="list-group-item">Aluguéis</li>
+                                    <li class="list-group-item">Simulação de investimento</li>
+                                    <li class="list-group-item">Cotações</li>
+                                  </ul>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-header" id="headingFour">
+                            <h5 class="mb-0">
+                              <a href="#" class="btn" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                <i class="fas fa-chart-pie fa-lg"></i>&nbsp;&nbsp;Relatórios 
+                              </a>
+                            </h5>
+                          </div>
+                          <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                                <ul class="list-group">
+                                    <li class="list-group-item">Mensal</li>
+                                    <li class="list-group-item">Trimestral</li>
+                                    <li class="list-group-item">Gerencial</li>
+                                  </ul>
+                          </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingFive">
+                              <h5 class="mb-0">
+                                <a href="#" class="btn" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                                    <i class="fas fa-comments-dollar fa-lg"></i>&nbsp;&nbsp;Discussão
+                                </a>
+                              </h5>
+                            </div>
+                          </div>
                     </div>
                 </div>
+                <!-- Pagina inicio-->
                 <div class="col-md-9">
-
+                    <div class="card">
+                        <div class="card-header">
+                          Quote
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-3 mb-4">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            ABCP
+                                        </div>
+                                        <div class="card-body">
+                                            info
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mb-4">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            FAED
+                                        </div>
+                                        <div class="card-body">
+                                            info
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mb-4">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            HGLG
+                                        </div>
+                                        <div class="card-body">
+                                            info
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mb-4">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            KNRE
+                                        </div>
+                                        <div class="card-body">
+                                            info
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mb-4">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            VISC
+                                        </div>
+                                        <div class="card-body">
+                                            info
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mb-4">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            XPIN
+                                        </div>
+                                        <div class="card-body">
+                                            info
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <footer id="footer">
+        <p>Copyright AdminStrap, &copy; 2020</p>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
         integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
