menu dropdown fixed

--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="nav-item">
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-light my-2 my-sm-0 mr-2" type="submit">Procurar</button>
+                    <form class="form-inline my-2 my-lg-0 input-holder">
+                        <input class="form-control mr-sm-2 search-input" type="text" placeholder="código, nome ou segmento..." aria-label="Search">
+                        <button class="btn btn-light my-2 my-sm-0 mr-2 search-icon" type="submit">
+                            <i class="fas fa-search fa-lg"></i>
+                        </button>
                     </form>
                 </li>
                 <li class="nav-item">
                     <div class="dropdown">
                         <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown button
+                            Foto
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">Configuracões</a>
+                            <a class="dropdown-item" href="#">Logout</a>
                         </div>
                     </div>
                 </li>
