--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="nav-item">
-                    <form class="form-inline my-2 my-lg-0 input-holder">
-                        <input class="form-control mr-sm-2 search-input" type="text" placeholder="código, nome ou segmento..." aria-label="Search">
-                        <button class="btn btn-light my-2 my-sm-0 mr-2 search-icon" type="submit">
-                            <i class="fas fa-search fa-lg"></i>
-                        </button>
-                    </form>
+                <li class="nav-item mr-4">
+                    <div class="mt-2 collapse navbar-collapse">
+                        <input class="search-input" 
+                            type="text" 
+                            placeholder="código, nome ou segmento..." 
+                            aria-label="Search"/>
+                            <i class="fas fa-search fa-sm text-white search-icon"></i>
                 </li>
                 <li class="nav-item">
                     <div class="dropdown">
