user logo underline removed

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                     <div class="mt-2 navbar-collapse">
                         <input class="search-input" 
                             type="text" 
-                            placeholder="código, nome ou segmento..." 
+                            placeholder="Código, nome ou segmento..." 
                             aria-label="Search"/>
                             <i class="fas fa-search fa-sm text-white search-icon"></i>
                     </div>
                 </li>
                 <li class="nav-item">
                     <div class="dropdown dropdown-menu-right">
-                        <a class="dropdown-toggle text-white" type="button" id="dropdownMenuButton"
+                        <a class="dropdown-toggle nav-link text-white" type="button" id="dropdownMenuButton"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <img class="rounded-circle" src="https://codigo11-com-br.umbler.net/profiles/user6.jpg" alt="img-user" width="50" height="50">
                         </a>
@@ -59,7 +59,7 @@
             <div class="search-collapsed-menu bg-premium-dark">
                 <input class="search-input-collapsed-menu" 
                     type="text" 
-                    placeholder="Digite código, nome ou segmento..." 
+                    placeholder="Código, nome ou segmento..." 
                     aria-label="Search"/>
                 <i class="fas fa-search fa-lg text-white search-icon-collapsed-menu"></i>
             </div>
